--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,9 +1,12 @@
 
-add_executable(request request.cpp)
-target_link_libraries(request marko)
+# add_executable(request request.cpp)
+# target_link_libraries(request marko)
+#
+# add_executable(reply reply.cpp)
+# target_link_libraries(reply marko)
+#
+add_executable(rr rr.cpp)
+target_link_libraries(rr marko)
 
-add_executable(reply reply.cpp)
-target_link_libraries(reply marko)
-
-add_executable(listen listen.cpp)
-target_link_libraries(listen marko)
+add_executable(ps ps.cpp)
+target_link_libraries(ps marko)
